--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,22 +9,14 @@
     <EditText
         android:id="@+id/email"
         android:layout_width="wrap_content"
-<<<<<<< Updated upstream
+
         android:layout_height="10dp"
         android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-=======
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="99dp"
-        android:layout_marginBottom="30dp"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/Password"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:text="@string/email" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:inputType="" />
 
     <EditText
         android:id="@+id/Password"
@@ -36,7 +28,7 @@
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/login_button"
         app:layout_constraintEnd_toEndOf="parent" />
->>>>>>> Stashed changes
+
 
     <Button
         android:id="@+id/login_button"
