--- a/app/src/main/res/layout/week_log.xml
+++ b/app/src/main/res/layout/week_log.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ListView
+
+    <!--<ListView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginTop="177dp"
@@ -13,5 +14,5 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/weekListView"/>
+        android:id="@+id/weekListView"/> -->
 </LinearLayout>
