--- a/app/src/main/res/layout/edit.xml
+++ b/app/src/main/res/layout/edit.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -16,7 +16,7 @@
         tools:layout_editor_absoluteY="78dp" />
 
     <TextView
-        android:id="@+id/description"
+        android:id="@+id/txtDescription"
         android:layout_width="200dp"
         android:layout_height="150dp"
         android:text="TextView"
@@ -24,7 +24,7 @@
         tools:layout_editor_absoluteY="273dp" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/tmeEventTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
