--- a/app/src/main/res/layout/add.xml
+++ b/app/src/main/res/layout/add.xml
@@ -7,6 +7,16 @@
     android:layout_height="match_parent">
 
     <EditText
+        android:id="@+id/txtDescription"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="99dp"
+        android:layout_marginTop="68dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tmeEventTime" />
+
+    <EditText
         android:id="@+id/txtName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,16 +31,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/txtDescription"
-        android:layout_width="200dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="99dp"
-        android:layout_marginTop="68dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tmeEventTime" />
 
     <EditText
         android:id="@+id/tmeEventTime"
