Linear Layout Added

--- a/app/src/main/res/layout/day_goals.xml
+++ b/app/src/main/res/layout/day_goals.xml
@@ -23,4 +23,10 @@
         android:layout_marginTop="100dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/day_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"></LinearLayout>
 </android.support.constraint.ConstraintLayout>
