--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <TextView
         android:id="@+id/emailLabel"
         android:layout_width="100dp"
@@ -57,4 +58,10 @@
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/Notification_Test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Notify" />
 </android.support.constraint.ConstraintLayout>
