--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,20 +8,22 @@
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="195dp"
         android:layout_height="32dp"
-        android:layout_marginEnd="120dp"
+        android:layout_marginEnd="108dp"
+        android:hint="Email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Password" />
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="348dp" />
 
     <EditText
         android:id="@+id/Password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="99dp"
-        android:layout_marginBottom="46dp"
+        android:layout_marginEnd="96dp"
+        android:layout_marginBottom="124dp"
         android:ems="10"
+        android:hint="Password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/login_button"
         app:layout_constraintEnd_toEndOf="parent" />
